@startuml

entity User as "Пользователь" {
  id: UUID <<key>>
  username: STRING
  password: STRING
  full_name: STRING
  registered_at: TIMESTAMP
  last_activity_at: TIMESTAMP
}

entity House as "Дом" {
  id: UUID <<key>>
  user_id: UUID
  address: STRING
  created_at: TIMESTAMP
  updated_at: TIMESTAMP 
}

entity Location as "Комната" {
  id: UUID <<key>>
  house_id: UUID
  name: STRING
  created_at: TIMESTAMP
  updated_at: TIMESTAMP 
}

entity SensorType as "Тип устройства" {
  id: UUID <<key>>
  code: STRING
  name: STRING 
}

entity Sensor as "Устройство" {
  id: UUID <<key>>
  location_id: UUID 
  sensor_type_id: UUID
  name: STRING 
  serial_number: STRING
  status: STRING
  created_at: TIMESTAMP
  last_activity_at: TIMESTAMP 
}

entity TelemetryData as "Телеметрия" {
  id: UUID <<key>>
  sensor_id: UUID
  value: STRING
  created_at: TIMESTAMP
}

User ||--o{ House : "принадлежит"
House ||--o{ Location : "содержит"
Location ||--o{ Sensor : "находится в"
SensorType ||--o{ Sensor : "имеет тип"
Sensor ||--o{ TelemetryData : "отправляет"

@enduml